<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XRead</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="autoCompleteText">http://www.</string>
    <string name="hint">URL einfügen &#8230;</string>
    <string name="info">Hier steht, was die App ist, was sie kann und warum es so genial war, sie herunterzuladen!! yeah yeah!</string>
    <string name="intro">An XML, JSON, Linked-Data and Microdata Reader for Android</string>
    <string name="history">History</string>
    <string name="memorystore_data">memorystore.data</string>
    <string name="trends">Trends:</string>
    <string name="follow">follow</string>
    <string name="suche">suchen</string>
    <string name="adresse">Adresse:</string>
    <string name="antwort">Antworten:</string>
    <string name="twitterUser">Username:</string>
    <string name="stackoverflowFrage">Frage:</string>
    <string name="longitude">Längengrad:</string>
    <string name="latitude">Breitengrad:</string>
    <string name="suchbegriff">Suchbegriff:</string>
    <string name="getTimeLine">hole Timeline</string>

</resources>