<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/twitterImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@null"
        android:src="@drawable/twitter"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/twitterImageButton"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/twitterUser"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextTwitterUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewUsername"
        android:layout_toRightOf="@+id/textViewUsername"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName" >
    </EditText>

    <Button
        android:id="@+id/buttonFollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextTwitterUser"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextTwitterUser"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/follow"
        android:enabled="false" />

    <TextView
        android:id="@+id/TextViewTrends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonFollow"
        android:layout_toLeftOf="@+id/editTextTwitterUser"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/trends"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewTrends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:layout_alignLeft="@+id/buttonFollow"
        android:layout_alignTop="@+id/TextViewTrends" >

    </ListView>

</RelativeLayout>